--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -33,6 +33,7 @@
 html, body {
     height: 100%;
     min-height: 100vh;
+    max-width: 100vw;
 }
 
 h1 {
@@ -59,6 +60,7 @@ h4 {
 
 .page {
     width: 100%;
+    overflow-x: hidden;
 }
 
 .divider {
